--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -63,10 +63,10 @@
     "timetravelmod.ban": "[BAN]",
     "timetravelmod.generic.comma" : "%s, %s",
     "timetravelmod.generic.and" : "%s and %s",
-    "tm.timetravelmod.tmcreative.description": "A special Time Machine. This Time Machine is only available in creative mode and allows to time travel without building anything. Instead, you only have to use the item and you will have access to all Time Lines. The Creative Time Machine also doesn't have any cool down time.",
-    "tm.timetravelmod.tmcreative.name": "Creative time machine",
-    "tm.timetravelmod.tmtier1.description": "A very simple Time Machine. You will only reach the Old West.",
-    "tm.timetravelmod.tmtier1.name": "Tier 1 Time Machine",
+    "tm.timetravelmod.creative.description": "A special Time Machine. This Time Machine is only available in creative mode and allows to time travel without building anything. Instead, you only have to use the item and you will have access to all Time Lines. The Creative Time Machine also doesn't have any cool down time.",
+    "tm.timetravelmod.creative.name": "Creative time machine",
+    "tm.timetravelmod.tier1.description": "A very simple Time Machine. You will only reach the Old West.",
+    "tm.timetravelmod.tier1.name": "Tier 1 Time Machine",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
     "config.timetravelmod.common.enableupdatepromos": "If this is disabled you won't be notiified of mod updates at world joining",
     "config.timetravelmod.common.enablecheaterreports": "If this is disabled game masters (ops) won't be notified when a possible cheater is detected"
