--- a/src/main/resources/assets/timetravelmod/lang/it_it.json
+++ b/src/main/resources/assets/timetravelmod/lang/it_it.json
@@ -26,5 +26,5 @@
     "block.timetravelmod.timemachinebasicblock": "Blocco base di macchina del tempo",
     "block.timetravelmod.timemachinecontrolpanel": "Pannello di controllo della macchina",
     "block.timetravelmod.timemachinecore": "Nucleo della macchina",
-    "tm.timetravelmod.tmcreative.name": "Macchina del tempo creativa"
+    "tm.timetravelmod.creative.name": "Macchina del tempo creativa"
 }
