--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -37,6 +37,8 @@
     "item.timetravelmod.timemachinebasicblock": "Time machine basic block",
     "item.timetravelmod.timemachinecontrolpanel": "Time machine control panel",
     "item.timetravelmod.timemachinecore": "Time machine core",
+    "item.timetravelmod.timemachinerecaller": "Time machine recaller",
+    "item.timetravelmod.timemachinetracker": "Time machine tracker",
     "itemGroup.timetravelmod": "Time Travel Mod",
     "block.timetravelmod.heavyblock": "Heavy block",
     "block.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
@@ -46,6 +48,8 @@
     "block.timetravelmod.timemachinebasicblock": "Time machine basic block",
     "block.timetravelmod.timemachinecontrolpanel": "Time machine control panel",
     "block.timetravelmod.timemachinecore": "Time machine core",
+    "block.timetravelmod.timemachinerecaller": "Time machine recaller",
+    "block.timetravelmod.timemachinetracker": "Time machine tracker",
     "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
     "timetravelmod.error.built.client": "The Time Machine isn't correctly built!",
@@ -67,6 +71,8 @@
     "tm.timetravelmod.creative.name": "Creative time machine",
     "tm.timetravelmod.tier1.description": "A very simple Time Machine. You will only reach the Old West.",
     "tm.timetravelmod.tier1.name": "Tier 1 Time Machine",
+    "tmupgrade.timetravelmod.tracker.name": "Time machine tracker",
+    "tmupgrade.timetravelmod.tracker.description": "This upgrade will configure it's adjacent Time machine recaller blocks when you use the Time Machine. When a Time machine recaller block is configured it's center turns green and, when powered with redstone, will return the Time Machine that configured it to your Time Line. If you travel across various Time Lines, you will need to install a Time Machine recaller on every Time Line you visit.",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
     "config.timetravelmod.common.enableupdatepromos": "If this is disabled you won't be notiified of mod updates at world joining",
     "config.timetravelmod.common.enablecheaterreports": "If this is disabled game masters (ops) won't be notified when a possible cheater is detected"
