Add the communications circuit

--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -39,6 +39,7 @@
     "item.timetravelmod.timemachinecore": "Time machine core",
     "item.timetravelmod.timemachinerecaller": "Time machine recaller",
     "item.timetravelmod.timemachinetracker": "Time machine tracker",
+    "item.timetravelmod.communicationscircuit": "Communications circuit",
     "itemGroup.timetravelmod": "Time Travel Mod",
     "block.timetravelmod.heavyblock": "Heavy block",
     "block.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
