Now Gunpowder wire is a separate item

--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -40,6 +40,7 @@
     "item.timetravelmod.timemachinerecaller": "Time machine recaller",
     "item.timetravelmod.timemachinetracker": "Time machine tracker",
     "item.timetravelmod.communicationscircuit": "Communications circuit",
+    "item.timetravelmod.gunpowderwire": "Gunpowder wire",
     "itemGroup.timetravelmod": "Time Travel Mod",
     "block.timetravelmod.heavyblock": "Heavy block",
     "block.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
@@ -51,6 +52,7 @@
     "block.timetravelmod.timemachinecore": "Time machine core",
     "block.timetravelmod.timemachinerecaller": "Time machine recaller",
     "block.timetravelmod.timemachinetracker": "Time machine tracker",
+    "block.timetravelmod.gunpowderwire": "Gunpowder wire",
     "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
     "timetravelmod.error.built.client": "The Time Machine isn't correctly built!",
