--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -9,50 +9,50 @@
     "advancements.timetraveling.doesnt_look_good.description": "Get killed by a Temporal Explosion",
     "advancements.timetraveling.better_than_mending.title": "Better than mending",
     "advancements.timetraveling.better_than_mending.description": "Fully repair any item in a temporal cauldron",
-    "chat.ttm.outdated": "A new Time Travel Mod version is available! Check it out in its CurseForge page!",
+    "chat.ttm.outdated": "A new Time Travel Mod version is available! Check it out on its CurseForge page!",
     "death.attack.temporalerror": "%s is playing too much with time",
     "gui.tm.error.text": "You can't travel to your time line or from nether or end!",
     "gui.tm.oldwest.text": "Old West",
     "gui.tm.present.text": "Present",
-    "gui.tmengineerbook.introduction": "Welcome to the Time Machine Engineer's Book! This book is your guide to the various Time Machines and Time Machine Upgrades of the Time Travel Mod and any plugin you've installed.",
+    "gui.tmengineerbook.introduction": "Welcome to the Time Machine Engineer's Book! This book is your guide to building and upgrading a Time Machine, as well as to any plugins you've installed.",
     "gui.tmengineerbook.tms": "Time Machines",
-    "gui.tmengineerbook.tmsintroduction": "To travel to other Time Lines you will need a Time Machine. A Time Machine is an structure that you will build in the world and it has 4 block types: basic blocks (the base structure), core blocks (the engine of the Time Machine), upgrade blocks (these modify the Time Machine behaviour) and a control panel. A Time Machine may have more than one valid block for any of the previous categories. The Time Machine defines where has to be placed every block, with the special case of the Time Machine Upgrades, that replace the basic blocks and aren't mandatory. When you've built your Time Machine, go inside it and right click the control panel. A menu will allow you to select your destination Time Line. The available Time Lines will depend on the Time Machine tier. Select one and you will do your first Time Travel. For a brief moment, you won't be able to use the Time Machine again, because the engine has to cool down. If you break the engine while it's cooling down, you will die from a Temporal Explosion, that leaves a time hole. Temporal Explosions also randomly happen when using the Time Machine, but this has a really low chance.",
-    "gui.tmengineerbook.tmstats": "Max tier: %s | Engine cooldown time: %s seconds",
-    "gui.tmengineerbook.howto": "How to build it",
+    "gui.tmengineerbook.tmsintroduction": "To travel to other Time Lines you will need a Time Machine. A Time Machine is a multi-block structure made with four different blocks: basic blocks (the structure), core blocks (the engine), upgrade blocks (these change behaviour), and a control panel. A Time Machine may have more than one valid block for any of the previous categories. Every block must be placed correctly, although Time Machine Upgrades can optionally replace any basic blocks in the structure. After you've built your Time Machine, go inside it and right-click the control panel. A menu will allow you to select your destination Time Line. The available Time Lines will depend on the Time Machine tier. Select one and you will Time Travel for the first time. The Time Machine's engine needs a moment to cool down before it can be used again. If you try to mine the engine while it's cooling down, it will explode, leaving a time hole. There is also a very low chance of a Temporal Explosion occurring any time you use a Time Machine.",
+    "gui.tmengineerbook.tmstats": "Max Tier: %s | Engine Cooldown Time: %s seconds",
+    "gui.tmengineerbook.howto": "Build Guide:",
     "gui.tmengineerbook.layer": "Layer: %s",
     "gui.tmengineerbook.compatibleupgrades": "Compatible Time Machine Upgrades",
     "gui.tmengineerbook.upgrades": "Time Machine Upgrades",
     "gui.tmengineerbook.noupgrades": "There isn't any available Time Machine Upgrade :(",
     "gui.tmengineerbook.compatibletms": "Compatible Time Machines",
-    "item.timetravelmod.controllercircuit": "Controller circuit",
-    "item.timetravelmod.creativetimemachine": "Creative time machine",
+    "item.timetravelmod.controllercircuit": "Controller Circuit",
+    "item.timetravelmod.creativetimemachine": "Creative Time Machine",
     "item.timetravelmod.engineerbook": "Time Machine Engineer's Book",
-    "item.timetravelmod.heavyblock": "Heavy block",
-    "item.timetravelmod.heavyingot": "Heavy ingot",
-    "item.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
-    "item.timetravelmod.temporalcauldron": "Temporal cauldron",
-    "item.timetravelmod.temporalexplosion": "Temporal explosion",
-    "item.timetravelmod.timecrystal": "Time crystal",
-    "item.timetravelmod.timecrystalore": "Time crystal ore",
-    "item.timetravelmod.timemachinebasicblock": "Time machine basic block",
-    "item.timetravelmod.timemachinecontrolpanel": "Time machine control panel",
-    "item.timetravelmod.timemachinecore": "Time machine core",
-    "item.timetravelmod.timemachinerecaller": "Time machine recaller",
-    "item.timetravelmod.timemachinetracker": "Time machine tracker",
-    "item.timetravelmod.communicationscircuit": "Communications circuit",
-    "item.timetravelmod.gunpowderwire": "Gunpowder wire",
+    "item.timetravelmod.heavyblock": "Heavy Block",
+    "item.timetravelmod.heavyingot": "Heavy Ingot",
+    "item.timetravelmod.reinforcedheavyblock": "Reinforced Heavy Block",
+    "item.timetravelmod.temporalcauldron": "Temporal Cauldron",
+    "item.timetravelmod.temporalexplosion": "Temporal Explosion",
+    "item.timetravelmod.timecrystal": "Time Crystal",
+    "item.timetravelmod.timecrystalore": "Time Crystal Ore",
+    "item.timetravelmod.timemachinebasicblock": "Time Machine Basic Block",
+    "item.timetravelmod.timemachinecontrolpanel": "Time Machine Control Panel",
+    "item.timetravelmod.timemachinecore": "Time Machine Core",
+    "item.timetravelmod.timemachinerecaller": "Time Machine Recaller",
+    "item.timetravelmod.timemachinetracker": "Time Machine Tracker",
+    "item.timetravelmod.communicationscircuit": "Communications Circuit",
+    "item.timetravelmod.gunpowderwire": "Gunpowder Wire",
     "itemGroup.timetravelmod": "Time Travel Mod",
-    "block.timetravelmod.heavyblock": "Heavy block",
-    "block.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
-    "block.timetravelmod.temporalcauldron": "Temporal cauldron",
-    "block.timetravelmod.temporalexplosion": "Temporal explosion",
-    "block.timetravelmod.timecrystalore": "Time crystal ore",
-    "block.timetravelmod.timemachinebasicblock": "Time machine basic block",
-    "block.timetravelmod.timemachinecontrolpanel": "Time machine control panel",
-    "block.timetravelmod.timemachinecore": "Time machine core",
-    "block.timetravelmod.timemachinerecaller": "Time machine recaller",
-    "block.timetravelmod.timemachinetracker": "Time machine tracker",
-    "block.timetravelmod.gunpowderwire": "Gunpowder wire",
+    "block.timetravelmod.heavyblock": "Heavy Block",
+    "block.timetravelmod.reinforcedheavyblock": "Reinforced Heavy Block",
+    "block.timetravelmod.temporalcauldron": "Temporal Cauldron",
+    "block.timetravelmod.temporalexplosion": "Temporal Explosion",
+    "block.timetravelmod.timecrystalore": "Time Crystal Ore",
+    "block.timetravelmod.timemachinebasicblock": "Time Machine Basic Block",
+    "block.timetravelmod.timemachinecontrolpanel": "Time Machine Control Panel",
+    "block.timetravelmod.timemachinecore": "Time Machine Core",
+    "block.timetravelmod.timemachinerecaller": "Time Machine Recaller",
+    "block.timetravelmod.timemachinetracker": "Time Machine Tracker",
+    "block.timetravelmod.gunpowderwire": "Gunpowder Wire",
     "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
     "timetravelmod.error.built.client": "The Time Machine isn't correctly built!",
@@ -72,10 +72,10 @@
     "timetravelmod.generic.and" : "%s and %s",
     "tm.timetravelmod.creative.description": "A special Time Machine. This Time Machine is only available in creative mode and allows to time travel without building anything. Instead, you only have to use the item and you will have access to all Time Lines. The Creative Time Machine also doesn't have any cool down time.",
     "tm.timetravelmod.creative.name": "Creative time machine",
-    "tm.timetravelmod.tier1.description": "A very simple Time Machine. You will only reach the Old West.",
+    "tm.timetravelmod.tier1.description": "A very simple Time Machine. You can only visit the Old West.",
     "tm.timetravelmod.tier1.name": "Tier 1 Time Machine",
-    "tmupgrade.timetravelmod.tracker.name": "Time machine tracker",
-    "tmupgrade.timetravelmod.tracker.description": "This upgrade will configure it's adjacent Time machine recaller blocks when you use the Time Machine. When a Time machine recaller block is configured it's center turns green and, when powered with redstone, will return the Time Machine that configured it to your Time Line. If you travel across various Time Lines, you will need to install a Time Machine recaller on every Time Line you visit.",
+    "tmupgrade.timetravelmod.tracker.name": "Time Machine Tracker",
+    "tmupgrade.timetravelmod.tracker.description": "This upgrade will configure its adjacent Time Machine Recaller Blocks when you use the Time Machine. When a Time Machine Recaller Block is configured its center turns green and, when powered with redstone, it will return the configured Time Machine to your Time Line. If you travel across various Time Lines, you will need to install a Time Machine recaller on every Time Line you visit.",
     "config.timetravelmod.common.enableupdatepromos": "If this is disabled you won't be notified of mod updates at world joining",
     "config.timetravelmod.common.enablecheaterreports": "If this is disabled game masters (ops) won't be notified when a possible cheater is detected"
 }
