- changed more phrasing, spelling, grammar

--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -8,15 +8,15 @@
     "advancements.timetraveling.doesnt_look_good.title": "That doesn't look good",
     "advancements.timetraveling.doesnt_look_good.description": "Get killed by a Temporal Explosion",
     "advancements.timetraveling.better_than_mending.title": "Better than mending",
-    "advancements.timetraveling.better_than_mending.description": "Fully repair any item in a temporal cauldron",
+    "advancements.timetraveling.better_than_mending.description": "Fully repair any item in a Temporal Cauldron",
     "chat.ttm.outdated": "A new Time Travel Mod version is available! Check it out on its CurseForge page!",
-    "death.attack.temporalerror": "%s is playing too much with time",
-    "gui.tm.error.text": "You can't travel to your time line or from nether or end!",
+    "death.attack.temporalerror": "%s was nullified by a temporal anomaly",
+    "gui.tm.error.text": "You can't travel to the time line you're already in, or travel from the Nether or the End!",
     "gui.tm.oldwest.text": "Old West",
     "gui.tm.present.text": "Present",
     "gui.tmengineerbook.introduction": "Welcome to the Time Machine Engineer's Book! This book is your guide to building and upgrading a Time Machine, as well as to any plugins you've installed.",
     "gui.tmengineerbook.tms": "Time Machines",
-    "gui.tmengineerbook.tmsintroduction": "To travel to other Time Lines you will need a Time Machine. A Time Machine is a multi-block structure made with four different blocks: basic blocks (the structure), core blocks (the engine), upgrade blocks (these change behaviour), and a control panel. A Time Machine may have more than one valid block for any of the previous categories. Every block must be placed correctly, although Time Machine Upgrades can optionally replace any basic blocks in the structure. After you've built your Time Machine, go inside it and right-click the control panel. A menu will allow you to select your destination Time Line. The available Time Lines will depend on the Time Machine tier. Select one and you will Time Travel for the first time. The Time Machine's engine needs a moment to cool down before it can be used again. If you try to mine the engine while it's cooling down, it will explode, leaving a time hole. There is also a very low chance of a Temporal Explosion occurring any time you use a Time Machine.",
+    "gui.tmengineerbook.tmsintroduction": "To travel to other Time Lines you will need a Time Machine. A Time Machine is a multi-block structure made with four different blocks: basic blocks (the structure), core blocks (the engine), upgrade blocks (these change behaviour), and a control panel. You may choose to place an upgrade block in any place where a basic block is valid. After you've built your Time Machine, go inside it and right-click the control panel. A menu will allow you to select your destination Time Line. The available Time Lines will depend on the Time Machine tier. Select one and you will Time Travel for the first time. The Time Machine's engine needs a moment to cool down before you can use it again. If you try to mine the engine while it's cooling down, it will explode, leaving a time hole. There is also a very low chance of a Temporal Explosion occurring any time you use a Time Machine.",
     "gui.tmengineerbook.tmstats": "Max Tier: %s | Engine Cooldown Time: %s seconds",
     "gui.tmengineerbook.howto": "Build Guide:",
     "gui.tmengineerbook.layer": "Layer: %s",
@@ -45,7 +45,7 @@
     "block.timetravelmod.heavyblock": "Heavy Block",
     "block.timetravelmod.reinforcedheavyblock": "Reinforced Heavy Block",
     "block.timetravelmod.temporalcauldron": "Temporal Cauldron",
-    "block.timetravelmod.temporalexplosion": "Temporal Explosion",
+    "block.timetravelmod.temporalexplosion": "Anomalous Atemporal Void",
     "block.timetravelmod.timecrystalore": "Time Crystal Ore",
     "block.timetravelmod.timemachinebasicblock": "Time Machine Basic Block",
     "block.timetravelmod.timemachinecontrolpanel": "Time Machine Control Panel",
@@ -53,8 +53,8 @@
     "block.timetravelmod.timemachinerecaller": "Time Machine Recaller",
     "block.timetravelmod.timemachinetracker": "Time Machine Tracker",
     "block.timetravelmod.gunpowderwire": "Gunpowder Wire",
-    "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
-    "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
+    "config.timetravelmod.client.enabletimelinemusic": "When enabled the Time Lines have their own music",
+    "config.timetravelmod.common.enableexperimentalfeatrues": "When enabled experimental features of the mod are activated",
     "timetravelmod.error.built.client": "The Time Machine isn't correctly built!",
     "timetravelmod.error.built.server": "The Time Machine used by the player isn't built",
     "timetravelmod.error.cooled_down.client": "The Time Machine core has to cool down!",
@@ -63,16 +63,16 @@
     "timetravelmod.error.player_inside.server": "The player isn't inside of the Time Machine",
     "timetravelmod.error.overloaded.client": "The Time Machine is overloaded!",
     "timetravelmod.error.overloaded.server": "The Time Machine used by the player is overloaded",
-    "timetravelmod.error.entitiesescaped": "Someone exited the Time Machine, canceled.",
+    "timetravelmod.error.entitiesescaped": "Someone exited the Time Machine, cancelled.",
     "timetravelmod.error.unreachable_dim": "The destination Time Line is unreachable with the Time Machine used by the player.",
-    "timetravelmod.error.uncompatible_upgrades": "The following Time Machine Upgrades are uncompatible beetwen them: %s",
+    "timetravelmod.error.uncompatible_upgrades": "The following Time Machine Upgrades are incompatible: %s",
     "timetravelmod.cheater_report": "A Time Travel request was received in the server, but the player who sent it (%s) is possibly cheating. Reason: %s. We suggest you to %s him.",
     "timetravelmod.ban": "[BAN]",
     "timetravelmod.generic.comma" : "%s, %s",
     "timetravelmod.generic.and" : "%s and %s",
-    "tm.timetravelmod.creative.description": "A special Time Machine. This Time Machine is only available in creative mode and allows to time travel without building anything. Instead, you only have to use the item and you will have access to all Time Lines. The Creative Time Machine also doesn't have any cool down time.",
-    "tm.timetravelmod.creative.name": "Creative time machine",
-    "tm.timetravelmod.tier1.description": "A very simple Time Machine. You can only visit the Old West.",
+    "tm.timetravelmod.creative.description": "This item is only available in Creative mode. Using it allows you to travel to any time period without restrictions or cool downs.",
+    "tm.timetravelmod.creative.name": "Creative Time Machine",
+    "tm.timetravelmod.tier1.description": "A very simple Time Machine that only reaches to the Old West.",
     "tm.timetravelmod.tier1.name": "Tier 1 Time Machine",
     "tmupgrade.timetravelmod.tracker.name": "Time Machine Tracker",
     "tmupgrade.timetravelmod.tracker.description": "This upgrade will configure its adjacent Time Machine Recaller Blocks when you use the Time Machine. When a Time Machine Recaller Block is configured its center turns green and, when powered with redstone, it will return the configured Time Machine to your Time Line. If you travel across various Time Lines, you will need to install a Time Machine recaller on every Time Line you visit.",
