--- a/src/main/resources/assets/timetravelmod/lang/de_de.json
+++ b/src/main/resources/assets/timetravelmod/lang/de_de.json
@@ -2,8 +2,8 @@
     "advancements.timetraveling.root.title": "Time Travel Mod",
     "advancements.timetraveling.root.description": "Der Kern der Modifikation",
     "advancements.timetraveling.doesnt_look_good.title": "Das sieht nicht gut aus",
-    "gui.tm.oldwest.text": "Alter Westen",
-    "gui.tm.present.text": "Gegenwart",
+    "gui.tm.timetravelmod.oldwest": "Alter Westen",
+    "gui.tm.timetravelmod.present": "Gegenwart",
     "gui.tmengineerbook.tms": "Zeitmaschinen",
     "gui.tmengineerbook.layer": "Ebene: %s",
     "gui.tmengineerbook.upgrades": "Zeitmaschinen-Upgrades",
