--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -11,9 +11,9 @@
     "advancements.timetraveling.better_than_mending.description": "Fully repair any item in a Temporal Cauldron",
     "chat.ttm.outdated": "A new Time Travel Mod version is available! Check it out on its CurseForge page!",
     "death.attack.temporalerror": "%s was nullified by a temporal anomaly",
-    "gui.tm.error.text": "You can't travel to the time line you're already in, or travel from the Nether or the End!",
-    "gui.tm.oldwest.text": "Old West",
-    "gui.tm.present.text": "Present",
+    "gui.tm.error": "You can't travel to the time line you're already in, or travel from the Nether or the End!",
+    "gui.tm.timetravelmod.oldwest": "Old West",
+    "gui.tm.timetravelmod.present": "Present",
     "gui.tmengineerbook.introduction": "Welcome to the Time Machine Engineer's Book! This book is your guide to building and upgrading a Time Machine, as well as to any plugins you've installed.",
     "gui.tmengineerbook.tms": "Time Machines",
     "gui.tmengineerbook.tmsintroduction": "To travel to other Time Lines you will need a Time Machine. A Time Machine is a multi-block structure made with four different blocks: basic blocks (the structure), core blocks (the engine), upgrade blocks (these change behaviour), and a control panel. You may choose to place an upgrade block in any place where a basic block is valid. After you've built your Time Machine, go inside it and right-click the control panel. A menu will allow you to select your destination Time Line. The available Time Lines will depend on the Time Machine tier. Select one and you will Time Travel for the first time. The Time Machine's engine needs a moment to cool down before you can use it again. If you try to mine the engine while it's cooling down, it will explode, leaving a time hole. There is also a very low chance of a Temporal Explosion occurring any time you use a Time Machine.",
