--- a/src/main/resources/assets/timetravelmod/lang/it_it.json
+++ b/src/main/resources/assets/timetravelmod/lang/it_it.json
@@ -8,8 +8,8 @@
     "advancements.timetraveling.doesnt_look_good.title": "Non ha un bell'aspetto",
     "advancements.timetraveling.doesnt_look_good.description": "Fatti uccidere da un'Esplosione Temporale",
     "advancements.timetraveling.better_than_mending.title": "Meglio di mending",
-    "gui.tm.oldwest.text": "Vecchio West",
-    "gui.tm.present.text": "Presente",
+    "gui.tm.timetravelmod.oldwest": "Vecchio West",
+    "gui.tm.timetravelmod.present": "Presente",
     "gui.tmengineerbook.tms": "Macchina del Tempo",
     "gui.tmengineerbook.layer": "Strato: %s",
     "gui.tmengineerbook.compatibleupgrades": "Upgrade della Macchina del Tempo Compatibili",
