--- a/src/main/resources/assets/timetravelmod/lang/ru_ru.json
+++ b/src/main/resources/assets/timetravelmod/lang/ru_ru.json
@@ -11,9 +11,9 @@
     "advancements.timetraveling.better_than_mending.description": "Полностью починит предмет во временном котле",
     "chat.ttm.outdated": "Доступна новая версия Time Travel Mod! Вы можете скачать её на CurseForge!",
     "death.attack.temporalerror": "%s был уничтожен во время временной аномалии",
-    "gui.tm.error.text": "Вы не можете отправиться в путешествие во временную линию, в которой вы уже находитесь, или отправиться в путешествие из ада или энда!",
-    "gui.tm.oldwest.text": "Старый Запад",
-    "gui.tm.present.text": "Настоящие",
+    "gui.tm.error": "Вы не можете отправиться в путешествие во временную линию, в которой вы уже находитесь, или отправиться в путешествие из ада или энда!",
+    "gui.tm.timetravelmod.oldwest": "Старый Запад",
+    "gui.tm.timetravelmod.present": "Настоящие",
     "gui.tmengineerbook.tms": "Машина времени",
     "gui.tmengineerbook.tmstats": "Максимальный уровень: %s | Время перезарядки двигателя: %s секунд",
     "gui.tmengineerbook.howto": "Инструкция по постройке:",
